--- a/src/components/Suggestions/Suggestions.module.scss
+++ b/src/components/Suggestions/Suggestions.module.scss
@@ -50,6 +50,39 @@
   }
 }
 
+.controller {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-80%);
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+  place-items: center;
+  border: none;
+  border-radius: var(--br-5);
+  background-color: rgba(33 33 33 / 0.3);
+  transition: background-color var(--duration) var(--timing-function);
+
+  &:hover,
+  &:focus-visible {
+    background-color: rgba(33 33 33 / 0.7);
+  }
+
+  &.prev {
+    left: 15px;
+  }
+
+  &.next {
+    right: 15px;
+  }
+}
+
+.arrow {
+  width: 26px;
+  height: 26px;
+  color: var(--cl-4);
+}
+
 .products {
   @extend %products;
 }
