--- a/src/main.scss
+++ b/src/main.scss
@@ -63,6 +63,16 @@ input[type="number"] {
   appearance: textfield;
 }
 
+button.control-prev {
+  border-top-left-radius: var(--br-main);
+  border-bottom-left-radius: var(--br-main);
+}
+
+button.control-next {
+  border-top-right-radius: var(--br-main);
+  border-bottom-right-radius: var(--br-main);
+}
+
 div.rccs {
   width: 100%;
   margin-top: 30px;
